force-app/main/default/objects/Territory__x/Territory__x.object-meta.xml
<CustomObject>
    <description>Territories</description>
    <externalDataSource>tesData</externalDataSource>
    <externalName>Territories</externalName>
    <label>Territory</label>
    <pluralLabel>Territories</pluralLabel>
</CustomObject>