force-app/main/default/objects/Territory__x/fields/RegionID__c.field-meta.xml
<CustomField>
    <fullName>RegionID__c</fullName>
    <description>RegionID</description>
    <externalDeveloperName>RegionID</externalDeveloperName>
    <label>RegionID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>