force-app/main/default/objects/Territory__x/fields/TerritoryDescription__c.field-meta.xml
<CustomField>
    <fullName>TerritoryDescription__c</fullName>
    <description>TerritoryDescription</description>
    <externalDeveloperName>TerritoryDescription</externalDeveloperName>
    <label>TerritoryDescription</label>
    <length>50</length>
    <type>Text</type>
</CustomField>