force-app/main/default/objects/Territory__x/fields/TerritoryID__c.field-meta.xml
<CustomField>
    <fullName>TerritoryID__c</fullName>
    <description>TerritoryID</description>
    <externalDeveloperName>TerritoryID</externalDeveloperName>
    <label>TerritoryID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>